# msw-logger-python

./: .env.example  .envrc  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/plans/: 2026-02-22-log-format-server-design.md  2026-02-22-log-format-server-plan.md
src/msw_logger/: __init__.py  config.py  logger.py  types.py  utils.py
src/msw_logger/transports/: __init__.py  console.py  datadog.py
tests/: test_config.py  test_console_transport.py  test_datadog_transport.py  test_logger.py  test_utils.py
