[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msw-logger"
version = "0.1.0"
description = "Structured logging for Python server applications with Console and Datadog transports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Monterey Software"}
]
keywords = ["logger", "logging", "structured-logging", "datadog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
datadog = ["datadog-api-client>=2.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
